static/css/main.css
#topbar{
    background-color:#4099FF;
}
#topbar a{
    font-family:"Open Sans",sans-serif;
    font-size:30px;
    color:white;
}
#logo{
    width:48px;
    height:48px;
}
#dem, #rep{
    background-repeat:no-repeat;
    background-size:auto 100%;
    background-position:center;
}
.dem:hover{
    border-color:#717ECD;
    color:#717ECD;
}
#dem{
    /*border:5px solid #021bbd;*/
    /*border:5px solid #4EB1CB;*/
    border:5px solid #717ECD;
    border-radius:5px;
    margin-top:10px;
    margin-left:30px;
    margin-right:15px;
    background-image:url("/img/democrat.png");
}
.rep:hover{
    border-color:#CF5C60;
    color:#CF5C60;
}
#rep{
    /*border:5px solid #de0100;*/
    border:5px solid #CF5C60;
    border-radius:5px;
    margin-top:10px;
    margin-left:15px;
    margin-right:30px;
    background-image:url("/img/republican.png");
}
#dembut{
    font-size:25px;
    display:block;
    margin-left:auto;
    margin-right:auto;
    margin-top: 20px;
    margin-bottom: 10px;
}
#repbut{
    display:block;
    font-size:25px;
    margin-left:auto;
    margin-right:auto;
    margin-top: 20px;
    margin-bottom: 10px;
}
#dem button{
    display:block;
    margin-left:auto;
    margin-right:auto;
    margin-top:10px;
    margin-bottom:10px;
}
#rep button{
    display:block;
    margin-left:auto;
    margin-right:auto;
    margin-top:10px;
    margin-bottom:10px;
}
#map{
    display:block;
    margin:auto;
}
#state-table {
    margin:30px;
}
#img-overlay {
    display:none;
    position:absolute;
    z-index:3;
}
#img-overlay img {
    height:200px;
    border:5px solid #c0c0c0;
}

